Add lab1 reference

--- a/labs.html
+++ b/labs.html
@@ -68,7 +68,7 @@
           <li>
             <p>
               Lab 1
-              <a href="#">
+              <a href="Labs/Lab1/index.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
