Add lab2 article

--- a/labs.html
+++ b/labs.html
@@ -76,7 +76,7 @@
           <li>
             <p>
               Lab 2
-              <a href="#">
+              <a href="Labs/Lab2/Lab2Web.pdf">
                 <i class="fas fa-link"></i>
               </a>
             </p>
