--- a/Labs/Lab3/home.html
+++ b/Labs/Lab3/home.html
@@ -33,6 +33,7 @@
     <div class="row">
       <div class="col-4">
         <?php
+					echo "User logged in:"."\n";
           echo $_REQUEST['pageUserName'];
         ?>
       </div>
