--- a/Labs/Lab3/updatePassword.html
+++ b/Labs/Lab3/updatePassword.html
@@ -29,19 +29,35 @@
 </head>
 <body>
 
-	<div class="container">
-    <div class="row">
-      <div class="col-4">
-        <?php
-					echo "User logged in:"."\n";
-          echo $_REQUEST['pageUserName'];
-        ?>
-      </div>
-      <div class="col-12">
-        <h1 class="text-center">Home page</h1>
-      </div>
-    </div>
-  </div>
+	<div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+				<form class="login100-form validate-form" method="post" action="updatePassword.php">
+					<span class="login100-form-title p-b-33">
+						Change Password
+					</span>
+
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="password" name="currentPassword" placeholder="Current Password">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+					</div>
+
+					<div class="wrap-input100 rs1 validate-input" data-validate="Password is required">
+						<input class="input100" type="password" name="newPassword" placeholder="New Password">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+					</div>
+
+					<div class="container-login100-form-btn m-t-20">
+						<button class="login100-form-btn">
+							Done
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 
 
 
