--- a/labs.html
+++ b/labs.html
@@ -84,7 +84,7 @@
           <li>
             <p>
               Lab 3
-              <a href="#">
+              <a href="Labs/Lab3/login.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
