--- a/Labs/Lab3/register.html
+++ b/Labs/Lab3/register.html
@@ -80,7 +80,7 @@
 					</div>
 
 					<div class="wrap-input100 rs1 validate-input">
-						<input class="input100" type="text" name="areaCode" placeholder="Area code">
+						<input class="input100" type="text" name="areaCode" placeholder="Area code like +506">
 						<span class="focus-input100-1"></span>
 						<span class="focus-input100-2"></span>
 					</div>
